# ai-video-ops-automation-day01

./: .gitignore  AGENTS.md  EXTENDING.md  GOAL.md  LICENSE  PRODUCT.md  README.md  THIRD_PARTY.md  app.toml  config.example.env  design-v7-canvas.md  design-v8-canvas-feel.md  design.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
content/: video.md
data/sample/: README.md  existing-script.md  video-brief.txt  workspace-seed.json
evidence/: 2026-07-14-acceptance-audit.md  2026-07-14-model-validation.md  2026-07-14-ui-validation.md  2026-07-14-youtube-read-validation.md  2026-07-15-acceptance-audit.md  2026-07-15-batch-workbench-validation.md  2026-07-15-commerce-script-baseline.md  2026-07-15-commerce-script-upgrade.md  2026-07-15-requirement-matrix.md  2026-07-15-script-controls.md  2026-07-15-ui-validation.md  2026-07-15-video-density-and-artifact-qa.md  2026-07-15-youtube-comment-validation.md  2026-07-15-youtube-write-validation.md  2026-07-17-cli-producer-validation.md  README.md
research/: commerce-script-quality.md  upstreams.md
scripts/: sync-ui.mjs  youtube_bridge.py  youtube_comment_auth.py
src/: README.md
src/video_ops/: __init__.py  cli.py  config.py
src/web/: api.ts  app.tsx  (+5 more)
tests/: README.md  conftest.py  test_api_concurrency.py  test_batch_generation.py  test_cli_producers.py  test_connectors.py  test_content_redlines.py  test_data_flywheel.py  test_domain_repository.py  test_import_export.py  test_platform_adapters.py  test_script_settings_generation.py  test_service_workflow.py  test_worker.py
(+63 files in other folders)
