[project]
name = "fifty-day01-video-operations"
version = "0.1.0"
description = "以视频为最小单位的内容生产、发布、数据回流与裂变工作台"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "openai>=2.0,<3",
  "pydantic>=2.11,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.35,<1",
]

[project.scripts]
video-ops = "video_ops.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_ops"]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
